# GPU-DirectNVMe

./: CMakeLists.txt
benchmarks/array/: benchmark.sh
benchmarks/cache/: benchmark.sh
benchmarks/readwrite_so/: CMakeLists.txt  read_write_so.cu  read_write_so.h
my_scripts/: bind_unbind_nvme.sh  test_main.py
